Backport code to 1.20.1